--- a/templates/authoring/asset.html
+++ b/templates/authoring/asset.html
@@ -27,6 +27,7 @@ $(boxid).highlight();
 </script>
 {% endblock extra_head %}
 
+{% load customtags %}
 
 {% load breadcrumbs %}
 {% block breadcrumbs %}
@@ -34,6 +35,7 @@ $(boxid).highlight();
     {% breadcrumb_url asset.product.title.client "client-detail" asset.product.title.client.id %}
     {% breadcrumb_url asset.product.title "title-detail" asset.product.title.id %}
     {% breadcrumb_url asset.product "product-detail" asset.product.id %}
+    {% breadcrumb "Asset" %}
     </ul>  
 {% endblock %}
 
@@ -105,13 +107,13 @@ $(boxid).highlight();
                                 <td colspan="3" class="qa_item">QA ITEM:</td>
                             </tr>
                         <tr>
-                            <td class="span2">{{ item.cer_user }}</td>
-                            <td class="span3">{{ item.date_created }}</td>
+                            <td class="span2"><b>Submitted by:</b> {{ item.cer_user }}</td>
+                            <td class="span3"><div class="text-center">{{ item.date_created }}</div></td>
                             <td class="span2"><div class="text-center"><span class="label label-{{ item.severity.color }}">{{ item.severity }}</span></div></td>
                         </tr>
                         <tr>                
                             <td colspan="3">                                
-                                {{ item.comment|linebreaks }}</td>
+                                {% bold_timecode item.comment|linebreaks %}</td>
                         </tr>
 
 
@@ -127,7 +129,7 @@ $(boxid).highlight();
 
                         <tr>
 
-                            <td colspan="3">{{ item.response_comment }}</td>
+                            <td colspan="3">{% bold_timecode item.response_comment|linebreaks %}</td>
                         <tr>
                         {% else %}
                         <tr>
