--- a/templates/management/title_detail.html
+++ b/templates/management/title_detail.html
@@ -5,6 +5,7 @@
 {% block breadcrumbs %}
     <ul class="breadcrumb">
     {% breadcrumb_url title.client "client-detail" title.client.id %}
+    {% breadcrumb "Title" %}
     </ul>  
 {% endblock %}
 
